system/controllers/network/cloudflared/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-policy
  namespace: cloudflared
  labels:
    app.kubernetes.io/name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: TCP
            - port: "7844"
              protocol: UDP
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "2000"
              protocol: TCP
